--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,45 @@
         app:layout_constraintEnd_toEndOf="@+id/btn_start"
         app:layout_constraintStart_toStartOf="@+id/btn_start"
         app:layout_constraintTop_toBottomOf="@+id/btn_reset_status" />
+
+    <Button
+        android:id="@+id/btn_work_fail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Worker fail"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_start"
+        app:layout_constraintStart_toStartOf="@+id/btn_start"
+        app:layout_constraintTop_toBottomOf="@+id/btn_work_on_uithread" />
+
+    <Button
+        android:id="@+id/btn_work_retry"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Worker retry"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_start"
+        app:layout_constraintStart_toStartOf="@+id/btn_start"
+        app:layout_constraintTop_toBottomOf="@+id/btn_work_fail" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        />
+
+    <Button
+        android:id="@+id/btn_to_chained_activity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="To chained worker activity"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_work_retry"
+        app:layout_constraintStart_toStartOf="@+id/btn_work_retry" />
 </androidx.constraintlayout.widget.ConstraintLayout>
